# tccpp-ngrams

./: .gitignore  .prettierignore  CMakeLists.txt  Makefile  README.md  conanfile.py  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.cjs
.github/workflows/: ci.yml
.husky/: pre-commit
benchmark/: CMakeLists.txt  common.hpp  ngrams.cpp  sha.cpp
cmake/: Mold.cmake
scripts/: prod.sh  run-persist.sh  start.sh
server/: app.ts  schema.ts  util.ts  vite.config.js
shared/: common.ts
src/: Aggregator.cpp  Aggregator.hpp  CMakeLists.txt  MessageDatabaseManager.cpp  MessageDatabaseManager.hpp  MessageDatabaseReader.cpp  MessageDatabaseReader.hpp  constants.hpp  main.cpp  ngram.hpp  tokenization.hpp  utils.hpp
src/utils/: random.hpp  sha.hpp
test/: CMakeLists.txt  ngrams.cpp  random.cpp  sha.cpp
ui/: index.html  main.ts  occlusion.ts  style.scss  tsconfig.json  utils.ts  vite.config.js
